# rn-jsi-rust-bridging

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-module.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/jsimodule/: JsiModuleModule.java  JsiModulePackage.java
cpp/: react-native-jsi-module.cpp  react-native-jsi-module.h
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/jsimoduleexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/JsiModuleExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/JsiModuleExample.xcodeproj/: project.pbxproj
example/ios/JsiModuleExample.xcodeproj/xcshareddata/xcschemes/: JsiModuleExample.xcscheme
example/ios/JsiModuleExample.xcworkspace/: contents.xcworkspacedata
example/ios/JsiModuleExampleTests/: JsiModuleExampleTests.m
example/src/: App.tsx
ios/: JsiModule.h  JsiModule.mm
rust_multiply_lib/: Cargo.toml
rust_multiply_lib/.cargo/: config.toml
rust_multiply_lib/src/: lib.rs
src/: index.tsx
